<?xml version="1.0"?>
<package format="2">
  <name>orora</name>
  <version>0.0.1</version>
  
  <description>Outlier-RObust Radar odometry</description>
  
  <maintainer email="shapelim@kaist.ac.kr">keenan</maintainer>
  <author>Hyungtae Lim</author>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
