<?xml version="1.0"?>
<package format="2">
  <name>sc_pgo</name>
  <version>0.0.1</version>

  <description>
    Scan-Context-based Pose-graph optimization 
  </description>

  <maintainer email="paulgkim@kaist.ac.kr">Giseop Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
